Store grid state in URL
- Makes it considerably easier to navigate between skater/goalie ratings pages and details pages

--- a/src/views/goalieRatings/goalieRatings.template.html
+++ b/src/views/goalieRatings/goalieRatings.template.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-12">
         <league-selector show-unassigned="true"
-          initial-league="$ctrl.goalieRatingsGridService.selectedLeague"
+          initial-league="$ctrl.league"
           on-change="$ctrl.leagueUpdated(league)"></league-selector>
       </div>
     </div>
