--- a/src/views/teamInfo/teamInfo.template.html
+++ b/src/views/teamInfo/teamInfo.template.html
@@ -17,7 +17,7 @@
     <div class="col-md-12">
       <div class="row">
         <div class="col-sm-6">
-          <h3><span ng-bind="$ctrl.teamInfo.City"></span> <span ng-bind="$ctrl.teamInfo.Name"></span></h3>
+          <h3><span ng-bind="$ctrl.teamInfo.Name"></span></h3>
         </div>
         <div class="col-sm-6">
           <div class="row">
@@ -85,6 +85,9 @@
           </li>
           <li ng-if="$ctrl.league === 'pro'" ng-class="{ active: $ctrl.page === 'Depth' }">
             <a ng-click="$ctrl.open('Depth')">Depth</a>
+          </li>
+          <li ng-if="$ctrl.league === 'pro'" ng-class="{ active: $ctrl.page === 'Lines' }">
+            <a ng-click="$ctrl.open('Lines')">Lines</a>
           </li>
         </ul>
       </div>
@@ -155,6 +158,10 @@
 
       <div ng-if="$ctrl.openedPages.Depth" ng-show="$ctrl.page === 'Depth'">
         <depth-chart team="$ctrl.$routeParams.id"></depth-chart>
+      </div>
+
+      <div ng-if="$ctrl.openedPages.Lines" ng-show="$ctrl.page === 'Lines'">
+        <team-lines team="$ctrl.$routeParams.id"></team-lines>
       </div>
     </div>
   </div>
